syntax = "proto3";
package lb.rps.v1;

option go_package = "challenge/x/rps/types";

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

// Msg defines the Msg service.
service Msg {
  // CreateStudent create a new student on the module
  rpc CreateStudent(MsgCreateStudent) returns (MsgCreateStudentResponse);
  // DeleteStudent remove a student from the module
  rpc DeleteStudent(MsgDeleteStudent) returns (MsgDeleteStudentResponse);
}

// MsgCreateStudent is used when creating a new student
message MsgCreateStudent {
  // name is the name of the student
  string name = 1;
  // id is a unique address for each student
  string id = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  // age is the age of the student
  uint64 age = 3;
}

// MsgCreateStudentResponse is the response for the create student
message MsgCreateStudentResponse {}

// MsgCreateStudent is used when deleting a student
message MsgDeleteStudent {
  // id for the student who will be deleted
  string id = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}

// MsgDeleteStudentResponse is the response for the delete student
message MsgDeleteStudentResponse {}